[package]
name = "ruscii"
version = "0.4.0"
authors = ["Luis Enrique Muñoz Martín <lemunozm@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
description = "Terminal graphics engine"
homepage = "https://github.com/lemunozm/ruscii/"
repository = "https://github.com/lemunozm/ruscii/"
keywords = ["terminal", "graphics-engine", "console", "game-engine", "key-events"]
categories = ["game-engines", "game-development", "command-line-interface", "command-line-utilities", "rendering::engine"]

[dependencies]
crossterm = "0.26.1"
device_query = "1.1.2"
num = "0.4.0"

[dev-dependencies]
rand = "0.8.5"

